# cpu_caps

./: .gitignore  Cargo.toml  Makefile  README.md  check_cpu_caps.sh  obsolete.sh  test.sh
scripts/: check_cpu_caps.sh
sh/: README.md  check_cpu_caps.sh
src/: cpu_caps.rs  de.rs  k8s.rs  main.rs
src/cpu_caps/: types.rs
src/de/: types.rs
src/de/types/: capabilities.rs  supported_features.rs  virsh_domcapabilities.rs
testdata/: capabilities.xml  supported_features.xml  virsh_domcapabilities.xml
