[package]
name = "cpu_caps"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.0", features = [
  "serialize",
  "async-tokio",
  "encoding",
  "overlapped-lists",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
kube = { version = "3.0.1" }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = { version = "1.50.0", features = ["full"] }
