[package]
name = "cpu_caps"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.39.0", features = [
  "serialize",
  "async-tokio",
  "encoding",
  "overlapped-lists",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_yaml_ng = "0.10.0"
kube = { version = "3.1.0", features = ["client", "ws"] }
futures = "0.3.32"
k8s-openapi = { version = "0.27.1", features = ["latest"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18" }
tar = "0.4.45"
flate2 = "1.1.9"
log = "0.4.29"
env_logger = "0.11.10"
clap = { version = "4.6.0", features = ["derive"] }
